--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flex</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
     <header class="header">
@@ -21,6 +22,11 @@
                 <img src="./download (1).png" alt="java script">
             </a>
         </div>
+        <div class="burger">
+            <span class="material-symbols-outlined">
+                menu
+            </span>
+        </div>
     </header>
 
     <div class="main">
@@ -30,6 +36,71 @@
         <main>
             <p>main content</p>
         </main>
+    </div>
+
+    <div class="cards">
+
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="download (1).png" alt="">
+            <div class="card-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, aperiam. Fugit voluptate voluptatem molestiae iste alias asperiores laboriosam, doloribus blanditiis.</p>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
